--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>DemoPrework</title>
 </head>
 <body>
-    <p>Hola este es mi sitio web </p>
+    <p>Hola People este es mi sitio web.  </p>
 </body>
 </html>
